--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -58,6 +58,10 @@
 .section-header {
     padding: 4rem 0;
 
+    h3 {
+        text-align: center;
+        font-size: 1.25rem;
+    }
     h3:before {
         content: '';
         position: absolute;
@@ -98,6 +102,7 @@
     .section-header {
         h3 {
             padding: 1rem 0;
+            font-size: 1.75rem;
         }
     }
 }
